# Jago

./: .gitignore  CMakeLists.txt  main.cpp  test.jago
GoogleTests/: CMakeLists.txt
GoogleTests/tests/: JagoUtilsTest.cpp
jago/: JagoBytecodes.h  JagoCompiler.cpp  JagoCompiler.h  JagoExpressionFlag.h  JagoGlobal.h  JagoKeyword.cpp  JagoKeyword.h  JagoLexer.cpp  JagoLexer.h  JagoOperator.cpp  JagoOperator.h  JagoParser.cpp  JagoParser.h  JagoToken.cpp  JagoToken.h  JagoUtils.cpp  JagoUtils.h  PrimitiveTypes.h
jago/compiler/: JagoCompiler.cpp  JagoCompiler.h  JagoType.h
jago/exceptions/: JagoCompilerException.h
jago/interpreter/: JagoClass.cpp  JagoClass.h  JagoEvaluator.cpp  JagoEvaluator.h  JagoField.cpp  JagoField.h  JagoInterpreter.cpp  JagoInterpreter.h  JagoMethod.cpp  JagoMethod.h  JagoNativeMethod.cpp  JagoNativeMethod.h  JagoObject.cpp  JagoObject.h  JagoScope.cpp  JagoScope.h  JagoType.cpp  JagoType.fwd.h  JagoType.h  JagoValue.cpp  JagoValue.h  JagoVariable.cpp  JagoVariable.h
jago/interpreter/AST/: ASTNode.cpp  ASTNode.h  ExpressionNodes.cpp  ExpressionNodes.h  StatementNodes.cpp  StatementNodes.h  Visitor.cpp  Visitor.h
jago/interpreter/helper/: ClassDeclarationHandler.cpp  ClassDeclarationHandler.h
